# AoC2021_Day3

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.h  Functions.cpp  Functions.h  main.cpp
src/resources/: test.txt
